--- a/package.json
+++ b/package.json
@@ -18,14 +18,21 @@
     "@angular/platform-browser": "^14.0.0",
     "@angular/platform-browser-dynamic": "^14.0.0",
     "@angular/router": "^14.0.0",
+    "@nrwl/angular": "15.7.2",
+    "bootstrap": "^5.2.3",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^14.2.1",
+    "@angular-devkit/core": "~14.2.1",
+    "@angular-devkit/schematics": "~14.2.1",
     "@angular/cli": "~14.2.1",
     "@angular/compiler-cli": "^14.0.0",
+    "@nrwl/nx-cloud": "15.0.0",
+    "@nrwl/workspace": "15.7.2",
+    "@schematics/angular": "~14.2.1",
     "@types/jasmine": "~4.0.0",
     "jasmine-core": "~4.3.0",
     "karma": "~6.4.0",
@@ -33,6 +40,8 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.0.0",
+    "nx": "15.7.2",
+    "prettier": "^2.6.2",
     "typescript": "~4.7.2"
   }
 }
